--- a/ML_Gender_Classification.ipynb
+++ b/ML_Gender_Classification.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_Gender_Classification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMoLAicHS/CKt2AX7fBzubT",
+      "authorship_tag": "ABX9TyMMdlzHnYGzr8JHn7uOFBZR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,10 +42,20 @@
       "source": [
         "import nltk\n",
         "import os\n",
-        "import random\n",
-        "\n",
+        "import random"
+      ],
+      "metadata": {
+        "id": "OJ3zhAanZQvq"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def predict_gender():\n",
         "\t#import male database and store in male_list\n",
+        "\n",
         "\tmale_file=open(\"male.txt\",\"r\")\n",
         "\tmale_list=male_file.readlines()\n",
         "\tfor i in range(len(male_list)):\n",
@@ -78,9 +88,10 @@
         "\n",
         "\t#mapping features to the gender\n",
         "\tfeatures = [(genderFeature(name), gender) for (name, gender) in labelled_names]\n",
-        "\n",
+        "\t#Train and test set\n",
+        "\ttrain_set, test_set = features[500:], features[:500]\n",
         "\t#classifying gender according to NaiveBayesClassifier\n",
-        "\tclassifier = nltk.NaiveBayesClassifier.train(features)\n",
+        "\tclassifier = nltk.NaiveBayesClassifier.train(train_set)\n",
         "\n",
         "\tprint (\"Welcome to the gender predictor\")\n",
         "\tprint (\"accuracy naive bayes classifier : \", nltk.classify.accuracy(classifier, features))\n",
@@ -104,23 +115,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aNbLsndaKapE",
-        "outputId": "559b4809-6c17-4d89-fc8c-c758f001e582"
+        "outputId": "cf863108-0326-43ec-e5f0-4f703fb1d8de"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
             "Welcome to the gender predictor\n",
-            "accuracy naive bayes classifier :  0.8626463552813798\n",
-            "Enter the first name or q to exit: mabel\n",
+            "accuracy naive bayes classifier :  0.8601284149565656\n",
+            "Enter the first name or q to exit: alessandro\n",
+            "male\n",
+            "Enter the first name or q to exit: carlos\n",
+            "male\n",
+            "Enter the first name or q to exit: melissa\n",
             "female\n",
+            "Enter the first name or q to exit: carla\n",
+            "female\n",
+            "Enter the first name or q to exit: samuel\n",
+            "male\n",
+            "Enter the first name or q to exit: andres\n",
+            "male\n",
+            "Enter the first name or q to exit: pablo\n",
+            "male\n",
             "Enter the first name or q to exit: patricia\n",
             "female\n",
-            "Enter the first name or q to exit: kevin\n",
+            "Enter the first name or q to exit: alex\n",
             "male\n",
-            "Enter the first name or q to exit: luis\n",
+            "Enter the first name or q to exit: alexandro\n",
             "male\n",
             "Enter the first name or q to exit: q\n"
           ]
