--- a/ML_Gender_Classification.ipynb
+++ b/ML_Gender_Classification.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_Gender_Classification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMMdlzHnYGzr8JHn7uOFBZR",
+      "authorship_tag": "ABX9TyNpm/rCwQnQz48vtegb4QLX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "OJ3zhAanZQvq"
       },
-      "execution_count": 5,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
         "\tdef genderFeature(name):\n",
         "\t        name=name.upper()\n",
         "\t        return {\n",
-        "\t\t    'firstLetter' : name[0],\n",
+        "\t\t\t\t'firstLetter' : name[0],\n",
         "\t\t    'first2Letters' : name[0:2],\n",
         "\t\t    'first3Letters' : name[0:3],\n",
         "\t            'lastLetter': name[-1],\n",
@@ -94,7 +94,8 @@
         "\tclassifier = nltk.NaiveBayesClassifier.train(train_set)\n",
         "\n",
         "\tprint (\"Welcome to the gender predictor\")\n",
-        "\tprint (\"accuracy naive bayes classifier : \", nltk.classify.accuracy(classifier, features))\n",
+        "\tprint (\"accuracy naive bayes classifier : \", nltk.classify.accuracy(classifier, test_set))\n",
+        "\tclassifier.show_most_informative_features(15)\n",
         "\n",
         "\twhile(1):\n",
         "\t\tname=input(\"Enter the first name or q to exit: \")\n",
@@ -115,36 +116,32 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aNbLsndaKapE",
-        "outputId": "cf863108-0326-43ec-e5f0-4f703fb1d8de"
+        "outputId": "fe1e4384-63f4-4cf0-d1ac-8deae7ea0fe1"
       },
-      "execution_count": 6,
+      "execution_count": 42,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
             "Welcome to the gender predictor\n",
-            "accuracy naive bayes classifier :  0.8601284149565656\n",
-            "Enter the first name or q to exit: alessandro\n",
-            "male\n",
-            "Enter the first name or q to exit: carlos\n",
-            "male\n",
-            "Enter the first name or q to exit: melissa\n",
-            "female\n",
-            "Enter the first name or q to exit: carla\n",
-            "female\n",
-            "Enter the first name or q to exit: samuel\n",
-            "male\n",
-            "Enter the first name or q to exit: andres\n",
-            "male\n",
-            "Enter the first name or q to exit: pablo\n",
-            "male\n",
-            "Enter the first name or q to exit: patricia\n",
-            "female\n",
-            "Enter the first name or q to exit: alex\n",
-            "male\n",
-            "Enter the first name or q to exit: alexandro\n",
-            "male\n",
+            "accuracy naive bayes classifier :  0.84\n",
+            "Most Informative Features\n",
+            "                 lastTwo = 'NA'           female : male   =    100.2 : 1.0\n",
+            "                 lastTwo = 'IA'           female : male   =     55.2 : 1.0\n",
+            "              lastLetter = 'A'            female : male   =     35.8 : 1.0\n",
+            "                 lastTwo = 'SA'           female : male   =     35.3 : 1.0\n",
+            "              lastLetter = 'K'              male : female =     32.3 : 1.0\n",
+            "                 lastTwo = 'US'             male : female =     27.9 : 1.0\n",
+            "                 lastTwo = 'RA'           female : male   =     26.8 : 1.0\n",
+            "               lastThree = 'ANA'          female : male   =     26.2 : 1.0\n",
+            "                 lastTwo = 'DO'             male : female =     26.2 : 1.0\n",
+            "               lastThree = 'TTA'          female : male   =     25.8 : 1.0\n",
+            "                 lastTwo = 'TA'           female : male   =     25.5 : 1.0\n",
+            "                 lastTwo = 'RD'             male : female =     24.7 : 1.0\n",
+            "                 lastTwo = 'RT'             male : female =     24.1 : 1.0\n",
+            "                 lastTwo = 'LD'             male : female =     21.7 : 1.0\n",
+            "               lastThree = 'ARD'            male : female =     21.2 : 1.0\n",
             "Enter the first name or q to exit: q\n"
           ]
         }
