--- a/ML_Gender_Classification.ipynb
+++ b/ML_Gender_Classification.ipynb
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "OJ3zhAanZQvq"
       },
-      "execution_count": 28,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -116,32 +116,42 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aNbLsndaKapE",
-        "outputId": "fe1e4384-63f4-4cf0-d1ac-8deae7ea0fe1"
+        "outputId": "ec7662e0-fdd9-4dde-fa95-8f53f8d1600d"
       },
-      "execution_count": 42,
+      "execution_count": 54,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
             "Welcome to the gender predictor\n",
-            "accuracy naive bayes classifier :  0.84\n",
+            "accuracy naive bayes classifier :  0.874\n",
             "Most Informative Features\n",
-            "                 lastTwo = 'NA'           female : male   =    100.2 : 1.0\n",
-            "                 lastTwo = 'IA'           female : male   =     55.2 : 1.0\n",
-            "              lastLetter = 'A'            female : male   =     35.8 : 1.0\n",
-            "                 lastTwo = 'SA'           female : male   =     35.3 : 1.0\n",
+            "                 lastTwo = 'NA'           female : male   =     99.9 : 1.0\n",
+            "                 lastTwo = 'LA'           female : male   =     74.4 : 1.0\n",
+            "                 lastTwo = 'IA'           female : male   =     39.9 : 1.0\n",
+            "              lastLetter = 'A'            female : male   =     34.4 : 1.0\n",
+            "                 lastTwo = 'SA'           female : male   =     34.1 : 1.0\n",
+            "                 lastTwo = 'TA'           female : male   =     33.6 : 1.0\n",
             "              lastLetter = 'K'              male : female =     32.3 : 1.0\n",
-            "                 lastTwo = 'US'             male : female =     27.9 : 1.0\n",
-            "                 lastTwo = 'RA'           female : male   =     26.8 : 1.0\n",
+            "                 lastTwo = 'US'             male : female =     28.9 : 1.0\n",
+            "               lastThree = 'ITA'          female : male   =     27.5 : 1.0\n",
+            "                 lastTwo = 'RA'           female : male   =     26.2 : 1.0\n",
             "               lastThree = 'ANA'          female : male   =     26.2 : 1.0\n",
-            "                 lastTwo = 'DO'             male : female =     26.2 : 1.0\n",
-            "               lastThree = 'TTA'          female : male   =     25.8 : 1.0\n",
-            "                 lastTwo = 'TA'           female : male   =     25.5 : 1.0\n",
+            "                 lastTwo = 'IO'             male : female =     26.2 : 1.0\n",
+            "               lastThree = 'TTA'          female : male   =     25.4 : 1.0\n",
+            "                 lastTwo = 'DO'             male : female =     25.1 : 1.0\n",
             "                 lastTwo = 'RD'             male : female =     24.7 : 1.0\n",
-            "                 lastTwo = 'RT'             male : female =     24.1 : 1.0\n",
-            "                 lastTwo = 'LD'             male : female =     21.7 : 1.0\n",
-            "               lastThree = 'ARD'            male : female =     21.2 : 1.0\n",
+            "Enter the first name or q to exit: pedro\n",
+            "male\n",
+            "Enter the first name or q to exit: julia\n",
+            "female\n",
+            "Enter the first name or q to exit: alex\n",
+            "male\n",
+            "Enter the first name or q to exit: patricio\n",
+            "male\n",
+            "Enter the first name or q to exit: patricia\n",
+            "female\n",
             "Enter the first name or q to exit: q\n"
           ]
         }
